--- a/hyobin/Basic_Algorithm_1/Maths/.gitignore
+++ b/hyobin/Basic_Algorithm_1/Maths/.gitignore
@@ -5,3 +5,5 @@
 /PrimeNumber_Plus_6588.class
 /Factorial_10872.class
 /Factorial_0Num_1676.class
+/Combination_2004.class
+/Combination_num0_2004.class
