--- a/hyobin/Basic_Algorithm_1/DP/.gitignore
+++ b/hyobin/Basic_Algorithm_1/DP/.gitignore
@@ -2,3 +2,7 @@
 /Tiling_2xn_11726.class
 /Tiling_2xn_2_11727.class
 /Plus_123_9095.class
+/BuyingCard_11052.class
+/BuyingCard2_16194.class
+/EasyStairs_10844.class
+/Echinsu_2193.class
